--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,12 @@ body{
 
 
 
-.light {
+/* .light {
   background-color: rgb(235, 203, 222);
   color: black;
   transition: all 0.5s ease;
   max-width: 100%;   
-}
+} */
 
 
 /* @media screen and (max-width: 400px) {
